--- a/src/app/sistema/components/ingresos/ingresos.component.html
+++ b/src/app/sistema/components/ingresos/ingresos.component.html
@@ -3,6 +3,9 @@
     <button type="button" class="btn btn-primary m-2">NUEVA DEVOLUCION DE
         MERCADERIA</button>
 
+    <button type="button" class="btn btn-primary m-2" (click)="verRemito()">VER</button>
+    <button type="button" class="btn btn-primary m-2" (click)="descargarRemito()">DESCARGAR</button>
+
     <div class="table-responsive">
         <table class="table table-striped table-hover table-sm">
             <thead>
@@ -193,7 +196,7 @@
                     <span class="input-group-text m-0 p-0 px-2" id="basic-addon1">Desc.</span>
                     <input type="text" class="form-control m-0 p-0 px-3" placeholder="Descripcion"
                         aria-label="Descripcion" aria-describedby="basic-addon1"
-                        [(ngModel)]="ingreso.establecimiento_descripcion" disabled>
+                        [(ngModel)]="ingreso.articulo_descripcion" disabled>
                 </div>
                 <div class="input-group m-1 p-0">
                     <span class="input-group-text m-0 p-0 px-2" id="basic-addon1">Loc.</span>
@@ -232,12 +235,12 @@
                         <option value=2>R</option>
                         <option value=2>X</option>
                     </select>
-                    
+
                     <input type="number" class="form-control m-0 p-0 px-3" placeholder="Punto" aria-label="Punto"
                         aria-describedby="basic-addon1" [(ngModel)]="ingreso.establecimiento_provincia">
-                        
+
                     <input type="number" class="form-control m-0 p-0 px-3" placeholder="Numero" aria-label="Numero"
-                    aria-describedby="basic-addon1" [(ngModel)]="ingreso.establecimiento_provincia">
+                        aria-describedby="basic-addon1" [(ngModel)]="ingreso.establecimiento_provincia">
                 </div>
             </div>
             <div class="col-3">
@@ -256,10 +259,22 @@
 
     @if(pestActiva == 'observaciones'){
     <div style="min-height: 180px;">
-        <p-divider align="left" type="solid" [style]="{'margin': '0px'}">Observaciones / Detalles</p-divider>
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <p-divider align="left" type="solid" [style]="{'margin': '0px'}">Observaciones / Sale en
+                    Remito</p-divider>
 
-        <textarea rows="3" pInputTextarea style="width: 100%;" [(ngModel)]="ingreso.observaciones">
-        </textarea>
+                <textarea rows="5" pInputTextarea style="width: 100%;" [(ngModel)]="ingreso.observaciones">
+                </textarea>
+            </div>
+            <div class="col-12 col-md-6">
+                <p-divider align="left" type="solid" [style]="{'margin': '0px'}">Observaciones / Para
+                    sistema</p-divider>
+
+                <textarea rows="5" pInputTextarea style="width: 100%;" [(ngModel)]="ingreso.observaciones_sistema">
+                </textarea>
+            </div>
+        </div>
     </div>
     }
 
@@ -267,59 +282,56 @@
         <b>Artículos a ingresar</b>
     </p-divider>
 
-    <div class="table-responsive">
+    <div class="table-responsive" style="max-height: 300px;">
         <table class="table table-striped table-hover table-sm">
             <thead>
                 <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">First</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
+                    <th scope="col" class="text-center">#</th>
+                    <th scope="col" class="text-center">Cód</th>
+                    <th scope="col" class="text-center">Descripción</th>
+                    <th scope="col" class="text-center">Cant.</th>
+                    <th scope="col" class="text-center">U.M.</th>
+                    <th scope="col" class="text-center" style="color: rgb(175, 28, 28);">Cant</th>
+                    <th scope="col" class="text-center" style="color: rgb(175, 28, 28);">U.F.</th>
+                    <th scope="col" class="text-center">Deposito</th>
+                    <th scope="col" class="text-center">#</th>
                 </tr>
             </thead>
             <tbody>
+                @for (art of articulosIngreso; track $index) {
                 <tr>
-                    <th scope="row">1</th>
-                    <td>MarkMarkMarkMarkMarkMarkMark</td>
-                    <td>Otto</td>
-                    <td>mdo</td>
-                    <td>Otto</td>
-                    <td>mdo</td>
-                    <td>Otto</td>
-                    <td>mdo</td>
-                    <td>Otto</td>
-                    <td>mdo</td>
+                    <th scope="row" class="p-0 text-end align-middle" style="font-size: small; color: rgb(88, 88, 88);">
+                        {{$index + 1}})</th>
+                    <th scope="row" class="p-0" style="min-width: 100px;"><input class="input_tabla" type="text"
+                            [(ngModel)]="art.codigo" (keyup.enter)="buscarArticuloPorCodigo(art)"></th>
+                    <td class="text-nowrap p-0" style="min-width: 500px;">{{art.descripcion ? art.descripcion : '-'}}
+                    </td>
+                    <td class="text-nowrap p-0" style="min-width: 80px;"><input class="input_tabla" type="number"
+                            [(ngModel)]="art.cantidad" (keyup)="calcularUnidadFundamental(art)"></td>
+                    <td class="text-nowrap p-0 text-center" style="min-width: 90px;">{{art.id_unidadMedida ?
+                        obtenerDescripcionUnidadMedida(art.id_unidadMedida) : '-'}}</td>
+                    <td class="text-nowrap p-0" style="min-width: 80px;"><input class="input_tabla" type="number"
+                            [(ngModel)]="art.cantidadUnidadFundamental"></td>
+                    <td class="text-nowrap p-0 text-center" style="min-width: 90px;">{{art.unidadFundamental ?
+                        art.unidadFundamental : '-'}}</td>
+                    <td class="text-nowrap p-0">
+                        <select class="input_tabla p-1" [(ngModel)]="art.id_deposito">
+                            @for (dep of depositos; track $index) {
+                            <option value={{dep.id}}>{{dep.alias}}</option>
+                            }
+                        </select>
+                    </td>
+                    <td class="text-nowrap p-0">
+
+                        <button type="button" class="btn btn-sm btn-secondary m-0 mx-1 p-0 px-1"
+                            (click)="verDetallesArticulos(art)"><i class="pi pi-bars"></i></button>
+                        @if(art.id_articulo){
+                        <button type="button" class="btn btn-sm btn-danger m-0 mx-1 p-0 px-1"
+                            (click)="eliminarArticulo(art.id)"><i class="pi pi-trash"></i></button>
+                        }
+                    </td>
                 </tr>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>mdo</td>
-                    <td>Otto</td>
-                    <td>mdo</td>
-                    <td>Otto</td>
-                    <td>mdo</td>
-                    <td>Otto</td>
-                    <td>mdo</td>
-                </tr>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>mdo</td>
-                    <td>Otto</td>
-                    <td>mdo</td>
-                    <td>Otto</td>
-                    <td>mdo</td>
-                    <td>Otto</td>
-                    <td>mdo</td>
-                </tr>
+                }
             </tbody>
         </table>
     </div>
@@ -564,5 +576,23 @@
         <button type="button" class="btn btn-sm btn-success m-2 my-5" (click)="agregarEstablecimiento()">AGREGAR
             ESTABLECIMIENTO</button>
         }
+    </div>
+</p-dialog>
+
+<p-dialog header="SELECCIONAR ARTICULO" [modal]="true" [(visible)]="visible_articulo" [style]="{ width: '30rem'}"
+    [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }">
+
+    <div class="row py-2">
+        <div class="card m-1 p-2 shadow">
+            <input type="text" id="searchInput" class="form-control" placeholder="Buscar..."
+                [(ngModel)]="searchValue_articulo" (keyup)="filtroArticulo()"
+                [ngStyle]="{'background-color':searchValue_articulo == '' ? '' : 'rgb(202, 253, 202)'}">
+
+            <div class="listbox-container" id="listbox">
+                @for (est of articulosFiltrados; track $index) {
+                <div class="listbox-item" (click)="asignarArticulo(articuloProvisorio!, est)">{{est.descripcion}}</div>
+                }
+            </div>
+        </div>
     </div>
 </p-dialog>
