--- a/src/app/sistema/components/ingresos/ingresos.component.html
+++ b/src/app/sistema/components/ingresos/ingresos.component.html
@@ -66,7 +66,7 @@
 
 
 <p-dialog header="{{ingreso.id ? 'Ver ingreso' : 'NUEVO INGRESO DE MERCADERIA'}}" [modal]="true"
-    [(visible)]="visible_ingreso" [style]="{ width: '80rem'}" [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
+    [(visible)]="visible_ingreso" [style]="{ width: '85rem'}" [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
     [maximizable]="true" [closeOnEscape]="false">
 
     <div class="row py-2" style="background-color: rgba(176, 245, 187, 0.555); border-radius: 6px;">
@@ -282,7 +282,7 @@
         <b>Artículos a ingresar</b>
     </p-divider>
 
-    <div class="table-responsive" style="max-height: 300px;">
+    <div class="table-responsive" style="max-height: 400px;">
         <table class="table table-striped table-hover table-sm">
             <thead>
                 <tr>
@@ -294,6 +294,8 @@
                     <th scope="col" class="text-center" style="color: rgb(175, 28, 28);">Cant</th>
                     <th scope="col" class="text-center" style="color: rgb(175, 28, 28);">U.F.</th>
                     <th scope="col" class="text-center">Deposito</th>
+                    <th scope="col" class="text-center">Lote</th>
+                    <th scope="col" class="text-center">Vencimiento</th>
                     <th scope="col" class="text-center">#</th>
                 </tr>
             </thead>
@@ -321,6 +323,10 @@
                             }
                         </select>
                     </td>
+                    <td class="text-nowrap p-0" style="min-width: 80px;"><input class="input_tabla" type="text" [disabled]="!art.solicitaLote"
+                            [(ngModel)]="art.lote"></td>
+                    <td class="text-nowrap p-0" style="min-width: 80px;"><input class="input_tabla" type="date" [disabled]="!art.solicitaVencimiento"
+                            [(ngModel)]="art.vencimiento"></td>
                     <td class="text-nowrap p-0">
 
                         <button type="button" class="btn btn-sm btn-secondary m-0 mx-1 p-0 px-1"
@@ -334,6 +340,8 @@
                 }
             </tbody>
         </table>
+
+        <button type="button" class="btn btn-success m-2 p-0 px-5" (click)="agregarArticulos()">Agregar</button>
     </div>
 
     <div class="row">
