--- a/src/app/sistema/components/ingresos/ingresos.component.html
+++ b/src/app/sistema/components/ingresos/ingresos.component.html
@@ -10,55 +10,31 @@
         <table class="table table-striped table-hover table-sm">
             <thead>
                 <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">First</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
+                    <th scope="col">TIPO</th>
+                    <th scope="col">NUMERO</th>
+                    <th scope="col">FECHA</th>
+                    <th scope="col">CLIENTE</th>
+                    <th scope="col">CUIT</th>
+                    <th scope="col">AUTORIZADO</th>
+                    <th scope="col">TRANSPORTE</th>
+                    <th scope="col">EST/ORIGEN</th>
+                    <th scope="col">OBSERVACIONES</th>
                 </tr>
             </thead>
             <tbody>
+                @for (ingreso of ingresos; track $index) {
                 <tr>
-                    <th scope="row">1</th>
-                    <td>MarkMarkMarkMarkMarkMarkMark</td>
-                    <td>Otto</td>
-                    <td>mdo</td>
-                    <td>Otto</td>
-                    <td>mdo</td>
-                    <td>Otto</td>
-                    <td>mdo</td>
-                    <td>Otto</td>
-                    <td>mdo</td>
+                    <th scope="row">INGRESO</th>
+                    <th scope="row">{{mostrarDocumento(ingreso.punto, ingreso.numero)}}</th>
+                    <td>{{ingreso.fecha}}</td>
+                    <td>{{ingreso.alias}}</td>
+                    <td>{{ingreso.cuit}}</td>
+                    <td>{{ingreso.autorizado_descripcion}}</td>
+                    <td>{{ingreso.transporte_transporte}}</td>
+                    <td>{{ingreso.establecimiento_descripcion}}</td>
+                    <td>{{ingreso.observaciones_sistema}}</td>
                 </tr>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>mdo</td>
-                    <td>Otto</td>
-                    <td>mdo</td>
-                    <td>Otto</td>
-                    <td>mdo</td>
-                    <td>Otto</td>
-                    <td>mdo</td>
-                </tr>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>mdo</td>
-                    <td>Otto</td>
-                    <td>mdo</td>
-                    <td>Otto</td>
-                    <td>mdo</td>
-                    <td>Otto</td>
-                    <td>mdo</td>
-                </tr>
+                }
             </tbody>
         </table>
     </div>
@@ -93,7 +69,7 @@
         </div>
         <div class="col-6 col-md-3">
             <div class="input-group">
-                <span class="input-group-text" id="basic-addon1">N</span>
+                <span class="input-group-text" id="basic-addon1">N°</span>
                 <input type="number" class="form-control" placeholder="Numero" aria-label="Numero"
                     aria-describedby="basic-addon1" [(ngModel)]="ingreso.numero" disabled="">
             </div>
@@ -129,10 +105,14 @@
         <div class="row">
             <div class="col-12 col-md-4">
                 <div class="input-group mb-3">
-                    <span class="input-group-text" id="basic-addon1">Cód.</span>
+                    <span class="input-group-text" id="basic-addon1" style="width: 15%;">Cód.</span>
+                    @if(!ingreso.id_cliente){
                     <input type="text" class="form-control" placeholder="Código" aria-label="Código"
                         aria-describedby="basic-addon1" [(ngModel)]="ingreso.codigo"
                         (keyup.enter)="buscarClientePorCodigo()">
+                    } @else {
+                    <span class="input-group-text" id="basic-addon1" style="width: 84%;">{{ingreso.codigo}}</span>
+                    }
                 </div>
             </div>
             <div class="col-12 col-md-8">
@@ -382,7 +362,7 @@
 
 
 
-<p-dialog header="SELECCIONAR CLIENTE" [modal]="true" [(visible)]="visible_cliente" [style]="{ width: '30rem'}"
+<p-dialog header="SELECCIONAR CLIENTE" [modal]="true" [(visible)]="visible_cliente" [style]="{ width: '50rem'}"
     [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }">
 
     <div class="row py-2">
@@ -394,7 +374,7 @@
             <div class="listbox-container" id="listbox">
                 @for (client of clientesFiltrados; track $index) {
                 <div class="listbox-item" (click)="asignarCliente(client)"><strong>{{client.alias}}</strong> - CUIT
-                    {{client.cuit}}</div>
+                    {{client.cuit}} ({{client.razon_social}})</div>
                 }
             </div>
         </div>
