--- a/src/app/sistema/components/ingresos/ingresos.component.html
+++ b/src/app/sistema/components/ingresos/ingresos.component.html
@@ -1,10 +1,6 @@
 <div class="container-fluid p-2">
     <button type="button" class="btn btn-primary m-2" (click)="mostrarModalIngreso()">NUEVO REMITO DE INGRESO</button>
-    <button type="button" class="btn btn-primary m-2">NUEVA DEVOLUCION DE
-        MERCADERIA</button>
-
-    <button type="button" class="btn btn-primary m-2" (click)="verRemito()">VER</button>
-    <button type="button" class="btn btn-primary m-2" (click)="descargarRemito()">DESCARGAR</button>
+    <button type="button" class="btn btn-primary m-2">NUEVA DEVOLUCION DE MERCADERIA</button>
 
     <div class="table-responsive">
         <table class="table table-striped table-hover table-sm">
@@ -23,7 +19,7 @@
             </thead>
             <tbody>
                 @for (ingreso of ingresos; track $index) {
-                <tr>
+                <tr (dblclick)="mostrarModalIngreso(ingreso.id)">
                     <th scope="row">INGRESO</th>
                     <th scope="row">{{mostrarDocumento(ingreso.punto, ingreso.numero)}}</th>
                     <td>{{ingreso.fecha}}</td>
@@ -33,6 +29,13 @@
                     <td>{{ingreso.transporte_transporte}}</td>
                     <td>{{ingreso.establecimiento_descripcion}}</td>
                     <td>{{ingreso.observaciones_sistema}}</td>
+                    <td><button type="button" class="btn btn-sm btn-primary m-0 mx-1 p-0 px-1"
+                            (click)="mostrarModalIngreso(ingreso.id)"><i class="pi pi-bars"></i></button>
+                        <button type="button" class="btn btn-sm btn-primary m-0 mx-1 p-0 px-1"
+                            (click)="verRemito(ingreso.id)"><i class="pi pi-file-pdf"></i></button>
+                        <button type="button" class="btn btn-sm btn-primary m-0 mx-1 p-0 px-1"
+                            (click)="descargarRemito(ingreso.id)"><i class="pi pi-download"></i></button>
+                    </td>
                 </tr>
                 }
             </tbody>
@@ -270,6 +273,7 @@
         <b>Artículos a ingresar</b>
     </p-divider>
 
+    <!-- TABLA ARTICULOS -->
     <div class="table-responsive" style="max-height: 400px;">
         <table class="table table-striped table-hover table-sm">
             <thead>
