--- a/src/app/sistema/components/clientes/clientes.component.html
+++ b/src/app/sistema/components/clientes/clientes.component.html
@@ -79,7 +79,7 @@
         <div class="col-12 col-md-6">
             <div class="input-group mb-3">
                 <span class="input-group-text" id="basic-addon1">CUIT</span>
-                <input type="text" class="form-control" placeholder="C.U.I.T." aria-label="C.U.I.T."
+                <input type="number" class="form-control" placeholder="C.U.I.T." aria-label="C.U.I.T."
                     aria-describedby="basic-addon1" [(ngModel)]="cliente.cuit" (keyup.enter)="buscarCUIT()">
             </div>
         </div>
