--- a/src/app/sistema/components/ingresos/ingresos.component.html
+++ b/src/app/sistema/components/ingresos/ingresos.component.html
@@ -44,7 +44,7 @@
 </div>
 
 
-<p-dialog header="{{ingreso.id ? 'Ver ingreso' : 'NUEVO INGRESO DE MERCADERIA'}}" [modal]="true"
+<p-dialog header="{{ingreso.id ? 'VER INGRESO' : 'NUEVO INGRESO DE MERCADERIA'}}" [modal]="true"
     [(visible)]="visible_ingreso" [style]="{ width: '85rem'}" [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
     [maximizable]="true" [closeOnEscape]="false">
 
@@ -53,17 +53,20 @@
         <div class="col-6 col-md-3 mb-2 mb-md-0">
             <div class="input-group">
                 <span class="input-group-text" id="basic-addon1">Modelo</span>
-                <select class="input-group-text" [(ngModel)]="ingreso.modelo">
+
+                <select class="input-group-text" [(ngModel)]="ingreso.modelo" [disabled]="ingreso.id != ''">
                     @for (modRem of modelosRemitos; track $index) {
                     <option value={{modRem.alias}}>{{modRem.descripcion}}</option>
                     }
                 </select>
+
             </div>
         </div>
         <div class="col-6 col-md-3 mb-2 mb-md-0">
             <div class="input-group">
                 <span class="input-group-text" id="basic-addon1" style="width: 50%;">P. Venta</span>
-                <select class="input-group-text" [(ngModel)]="ingreso.punto" style="width: 50%;">
+                <select class="input-group-text" [(ngModel)]="ingreso.punto" style="width: 50%;"
+                    [disabled]="ingreso.id != ''">
                     @for (ptoVta of puntosVenta; track $index) {
                     <option value={{ptoVta.punto}}>{{ptoVta.descripcion}}</option>
                     }
@@ -81,7 +84,7 @@
             <div class="input-group">
                 <span class="input-group-text" id="basic-addon1">FECHA</span>
                 <input type="date" class="form-control" placeholder="FECHA" aria-label="FECHA"
-                    aria-describedby="basic-addon1" [(ngModel)]="ingreso.fecha">
+                    aria-describedby="basic-addon1" [(ngModel)]="ingreso.fecha" [disabled]="ingreso.id != ''">
             </div>
         </div>
     </div>
@@ -206,7 +209,7 @@
         <div class="row mb-2">
             <div class="col-3">
                 <div class="input-group">
-                    <select class="input-group-text" [(ngModel)]="doc.tipo">
+                    <select class="input-group-text" [(ngModel)]="doc.tipo" [disabled]="ingreso.id != ''">
                         <option value=remito>REMITO</option>
                         <option value=factura>FACTURA</option>
                         <option value=ticket_balanza>TICKET BALANZA</option>
@@ -216,7 +219,7 @@
             </div>
             <div class="col-3">
                 <div class="input-group">
-                    <select class="input-group-text" [(ngModel)]="doc.letra">
+                    <select class="input-group-text" [(ngModel)]="doc.letra" [disabled]="ingreso.id != ''">
                         <option value=A>A</option>
                         <option value=B>B</option>
                         <option value=C>C</option>
@@ -225,26 +228,30 @@
                     </select>
 
                     <input type="number" class="form-control m-0 p-0 px-3" placeholder="Punto" aria-label="Punto"
-                        aria-describedby="basic-addon1" [(ngModel)]="doc.punto">
+                        aria-describedby="basic-addon1" [(ngModel)]="doc.punto" [readonly]="ingreso.id != ''">
 
                     <input type="number" class="form-control m-0 p-0 px-3" placeholder="Numero" aria-label="Numero"
-                        aria-describedby="basic-addon1" [(ngModel)]="doc.numero">
+                        aria-describedby="basic-addon1" [(ngModel)]="doc.numero" [readonly]="ingreso.id != ''">
                 </div>
             </div>
             <div class="col-3">
                 <div class="input-group">
                     <span class="input-group-text" id="basic-addon1">FECHA</span>
                     <input type="date" class="form-control" placeholder="FECHA" aria-label="FECHA"
-                        aria-describedby="basic-addon1" [(ngModel)]="doc.fecha">
+                        aria-describedby="basic-addon1" [(ngModel)]="doc.fecha" [disabled]="ingreso.id != ''">
                 </div>
             </div>
             <div class="col-3">
+                @if(!ingreso.id){
                 <button type="button" class="btn btn-warning p-1 mx-3"
                     (click)="eliminarDocumento(doc.id)">ELIMINAR</button>
+                }
             </div>
         </div>
         }
+        @if(!ingreso.id){
         <button type="button" class="btn btn-warning px-3" (click)="agregarDocumento()">Agregar</button>
+        }
     </div>
     }
 
@@ -255,14 +262,16 @@
                 <p-divider align="left" type="solid" [style]="{'margin': '0px'}">Observaciones / Sale en
                     Remito</p-divider>
 
-                <textarea rows="5" pInputTextarea style="width: 100%;" [(ngModel)]="ingreso.observaciones">
+                <textarea rows="5" pInputTextarea style="width: 100%;" [(ngModel)]="ingreso.observaciones"
+                    [readonly]="ingreso.id != ''">
                 </textarea>
             </div>
             <div class="col-12 col-md-6">
                 <p-divider align="left" type="solid" [style]="{'margin': '0px'}">Observaciones / Para
                     sistema</p-divider>
 
-                <textarea rows="5" pInputTextarea style="width: 100%;" [(ngModel)]="ingreso.observaciones_sistema">
+                <textarea rows="5" pInputTextarea style="width: 100%;" [(ngModel)]="ingreso.observaciones_sistema"
+                    [readonly]="ingreso.id != ''">
                 </textarea>
             </div>
         </div>
@@ -270,7 +279,7 @@
     }
 
     <p-divider align="left" type="solid" class="m-0 p-0" [style]="{'margin': '20px 0px'}">
-        <b>Artículos a ingresar</b>
+        <b>Artículos</b>
     </p-divider>
 
     <!-- TABLA ARTICULOS -->
@@ -287,7 +296,7 @@
                     <th scope="col" class="text-center" style="color: rgb(175, 28, 28);">U.F.</th>
                     <th scope="col" class="text-center">Deposito</th>
                     <th scope="col" class="text-center">Lote</th>
-                    <th scope="col" class="text-center">Vencimiento</th>
+                    <th scope="col" class="text-center">Vto</th>
                     <th scope="col" class="text-center">#</th>
                 </tr>
             </thead>
@@ -302,15 +311,16 @@
                     <td class="text-nowrap p-0" style="min-width: 500px;">{{art.descripcion ? art.descripcion : '-'}}
                     </td>
                     <td class="text-nowrap p-0" style="min-width: 80px;"><input class="input_tabla" type="number"
-                            [(ngModel)]="art.cantidad" (keyup)="calcularUnidadFundamental(art)"></td>
+                            [(ngModel)]="art.cantidad" (keyup)="calcularUnidadFundamental(art)"
+                            [readonly]="ingreso.id != ''"></td>
                     <td class="text-nowrap p-0 text-center" style="min-width: 90px;">{{art.id_unidadMedida ?
                         obtenerDescripcionUnidadMedida(art.id_unidadMedida) : '-'}}</td>
                     <td class="text-nowrap p-0" style="min-width: 80px;"><input class="input_tabla" type="number"
-                            [(ngModel)]="art.cantidadUnidadFundamental"></td>
+                            [(ngModel)]="art.cantidadUnidadFundamental" [readonly]="ingreso.id != ''"></td>
                     <td class="text-nowrap p-0 text-center" style="min-width: 90px;">{{art.unidadFundamental ?
                         art.unidadFundamental : '-'}}</td>
                     <td class="text-nowrap p-0">
-                        <select class="input_tabla p-1" [(ngModel)]="art.id_deposito">
+                        <select class="input_tabla p-1" [(ngModel)]="art.id_deposito" [disabled]="ingreso.id != ''">
                             @for (dep of depositos; track $index) {
                             <option value={{dep.id}}>{{dep.alias}}</option>
                             }
@@ -318,16 +328,17 @@
                     </td>
                     <td class="text-nowrap p-0" style="min-width: 80px;">
                         @if (art.solicitaLote) {
-                        <input class="input_tabla" type="text" [(ngModel)]="art.lote">
+                        <input class="input_tabla" type="text" [(ngModel)]="art.lote" [readonly]="ingreso.id != ''">
                         }
                     </td>
                     <td class="text-nowrap p-0" style="min-width: 80px;">
                         @if (art.solicitaVencimiento) {
-                        <input class="input_tabla" type="date" [(ngModel)]="art.vencimiento">
+                        <input class="input_tabla" type="date" [(ngModel)]="art.vencimiento"
+                            [readonly]="ingreso.id != ''">
                         }
                     </td>
                     <td class="text-nowrap p-0">
-                        @if(art.id_articulo){
+                        @if(art.id_articulo && ingreso.id == ''){
                         <button type="button" class="btn btn-sm btn-danger m-0 mx-1 p-0 px-1"
                             (click)="eliminarArticulo(art.id)"><i class="pi pi-trash"></i></button>
                         }
@@ -337,6 +348,7 @@
             </tbody>
         </table>
 
+        @if (ingreso.id == '') {
         <button type="button" class="btn btn-success m-2 p-0 px-5" (click)="agregarArticulos()">Agregar nuevo</button>
         @if (permite_secuencia_lote) {
         AGREGAR
@@ -346,6 +358,7 @@
         DIGITOS DEL LOTE.
         <button type="button" class="btn btn-primary m-2 p-0 px-2" (click)="agregarArticulosSecuencia()">Agregar
             {{cantidad_secuencia_lote}}</button>
+        }
         }
     </div>
 
@@ -358,6 +371,9 @@
             <button type="button" class="btn btn-success m-2" (click)="guardarIngreso()">GUARDAR Y MOSTRAR</button>
             <button type="button" class="btn btn-success m-2" (click)="guardarIngreso()">GUARDAR Y DESCARGAR</button>
             <button type="button" class="btn btn-success m-2" (click)="guardarIngreso()">GUARDAR</button>
+            } @else {
+                <button type="button" class="btn btn-success m-2" (click)="verRemito(ingreso.id)">VER PDF</button>
+                <button type="button" class="btn btn-success m-2" (click)="descargarRemito(ingreso.id)">DESCARGAR PDF</button>
             }
 
         </div>
